# meta_worker

./: .env.example  DEPLOY_HF_SPACES.md  Dockerfile  Dockerfile_debug  PUSH_TO_GITHUB_AND_HF.md  README.md  app.py  app_minimal.py  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  quick_test.py  requirements.txt  test_api.py  test_environment.py
openenv/: __init__.py  environment.py  graders.py  models.py  reward.py  tasks.py
server/: __init__.py  app.py
