[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-openenv"
version = "1.0.0"
description = "Real-world task simulation environment for evaluating AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Meta AI", email = "openenv@meta.com"}
]
keywords = ["openenv", "ai", "agent", "simulation", "real-world", "tasks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "openai>=1.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/bobby-nandigam/meta_worker"
Repository = "https://github.com/bobby-nandigam/meta_worker.git"
Documentation = "https://github.com/bobby-nandigam/meta_worker/blob/main/README.md"

[tool.setuptools]
packages = ["openenv", "server"]

[project.scripts]
server = "server.app:main"
